# openmp_mpi_labs

./: .gitignore  README.md
lab9/: CMakeLists.txt  main.cc
lab_10_11/: CMakeLists.txt  README.md  main.cc  player1.txt  player2.txt
lab_10_11/scripts/: build.sh  run.sh
lab_12/: CMakeLists.txt  bak  links  main.cc
lab_12/scripts/: run.sh
lab_6/: CMakeLists.txt  main.c
lab_7.1/: CMakeLists.txt  main.c
lab_7.2/: CMakeLists.txt  main.cc
